--- a/style.css
+++ b/style.css
@@ -16,36 +16,39 @@ body {
     overflow: hidden;
 }
 
-/* body::after {
-    content: "";
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    opacity: 0.5;
-    background-color: #000;
-} */
-
 #piano-container {
     min-height: 617px;
     min-width: 1727px;
     margin: 0 auto;
-    background-color: #fff;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgb(235 235 235) 100%);
     position: relative;
     border-radius: 100px 100px 20px 20px;
 }
 
-#piano-container::after {
-    content: "";
-    width: 100%;
-    border: 1px solid black;
+.top-base {
+    min-height: 201px;
+    min-width: 1727px;
+    margin: 0 auto;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgb(235 235 235) 100%);
     position: absolute;
-    bottom: 67%;
+    border-radius: 100px 100px 0px 0px;
+    z-index: 1;
 }
 
-.keys-container {
+.top-base::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 2px 4px 0 black;
+}
+
+.keys-base-container {
     height: 396px;
     width: 1657px;
-    background-color: #000;
+    background-color: rgb(0, 0, 0);
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -54,37 +57,57 @@ body {
     border-radius: 0 0 10px 10px;
 }
 
-.white-keys-container {
-    height: 100%;
-    width: 100%;
+.keys-container {
+    height: 99.5%;
+    width: 99.9%;
     display: flex;
+    margin: 0 auto;
+}
+
+.keys-container::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 4px 0px black;
+    border-radius: 0 0 10px 10px;
 }
 
 .white-key {
     width: calc(100% / 29);
-    background-color:blue;
+    background-color: white;
     position: relative;
+    border-radius: 0 0 5px 5px;
+    border-right: 0.5px solid black;
+}
+.white-key:last-child {
+    border-right: none;
 }
 
 .black-key {
     height: 62%;
     width: 37px;
-    background-color: orange;
+    background-color: black;
     position: absolute;
     z-index: 1;
 }
+
 .black-key.couple-left {
     left: 50%;
 }
+
 .black-key.couple-right {
     left: 87%;
 }
+
 .black-key.triple-left {
     left: 50%;
 }
+
 .black-key.triple-middle {
     left: 70%;
 }
+
 .black-key.triple-right {
     left: 87%;
 }
