--- a/style.css
+++ b/style.css
@@ -114,6 +114,21 @@ body {
     color: white;
 }
 
+.display {
+    width: 200px;
+    height: 90px;
+    background-color: black;
+    margin: 0 auto;
+    margin-top: 25px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.display h3 {
+    color: white;
+    margin: 5px;
+}
+
 .keyPressed {
     box-shadow: inset 0 -5px 10px 0px rgb(0 0 0 / 50%);
 }
