--- a/style.css
+++ b/style.css
@@ -176,6 +176,11 @@ body {
     margin-bottom: 0;
 }
 
+footer {
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.5);
+}
+
 .keyPressed {
     box-shadow: inset 0 -5px 10px 0px rgb(0 0 0 / 50%);
 }
